fix: icon-text alignment & icon styles

--- a/src/components/freestanding/icon/icon-wrapper.module.css
+++ b/src/components/freestanding/icon/icon-wrapper.module.css
@@ -1,5 +1,5 @@
-> img {
-  display: inline;
+.icon {
+  display: inline-flex;
   *display: inline;
   *zoom: 1;
   padding: 0;
