--- a/src/components/profile.module.css
+++ b/src/components/profile.module.css
@@ -6,8 +6,8 @@
     margin-bottom: 0;
   }
 
-  & img {
+  /*& img {
     width: 90px;
     height: 90px;
-  }
+  }*/
 }
